--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"compression": "^1.7.1",
 		"gray-matter": "^4.0.2",
 		"marked": "^2.0.0",
-		"polka": "next",
+		"polka": "^0.5.2",
 		"sirv": "^1.0.0"
 	},
 	"devDependencies": {
