--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"compression": "^1.7.1",
+		"date-fns": "^2.17.0",
 		"gray-matter": "^4.0.2",
 		"marked": "^2.0.0",
 		"polka": "^0.5.2",
